got basic get and query done, resource seems to be working for Quiz.

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,13 +1,24 @@
-#Updated at Fri Nov 16 10:14:11 EST 2012
-#Fri Nov 16 10:14:11 EST 2012
+#Updated at Sun Nov 18 12:53:25 EST 2012
+#Sun Nov 18 12:53:25 EST 2012
 application_name=Quizzo
+label_com_chariot_quizzo_db_player=Player
+label_com_chariot_quizzo_db_player_firstname=First Name
+label_com_chariot_quizzo_db_player_id=Id
+label_com_chariot_quizzo_db_player_lastname=Last Name
+label_com_chariot_quizzo_db_player_nickname=Nick Name
+label_com_chariot_quizzo_db_player_plural=Players
+label_com_chariot_quizzo_db_player_version=Version
 label_com_chariot_quizzo_db_quiz=Quiz
 label_com_chariot_quizzo_db_quiz_description=Description
 label_com_chariot_quizzo_db_quiz_id=Id
 label_com_chariot_quizzo_db_quiz_name=Name
+label_com_chariot_quizzo_db_quiz_players=Players
 label_com_chariot_quizzo_db_quiz_plural=Quizes
 label_com_chariot_quizzo_db_quiz_short_name=Short_name
 label_com_chariot_quizzo_db_quiz_version=Version
+menu_category_player_label=Player
 menu_category_quiz_label=Quiz
+menu_item_player_list_label=Players
+menu_item_player_new_label=Player
 menu_item_quiz_list_label=Quizes
 menu_item_quiz_new_label=Quiz
