--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Sun Nov 18 12:53:25 EST 2012
-#Sun Nov 18 12:53:25 EST 2012
+#Updated at Fri Nov 30 15:21:37 EST 2012
+#Fri Nov 30 15:21:37 EST 2012
 application_name=Quizzo
 label_com_chariot_quizzo_db_player=Player
 label_com_chariot_quizzo_db_player_firstname=First Name
@@ -16,6 +16,21 @@ label_com_chariot_quizzo_db_quiz_players=Players
 label_com_chariot_quizzo_db_quiz_plural=Quizes
 label_com_chariot_quizzo_db_quiz_short_name=Short_name
 label_com_chariot_quizzo_db_quiz_version=Version
+label_com_chariot_quizzo_model_player=Player
+label_com_chariot_quizzo_model_player_firstname=First Name
+label_com_chariot_quizzo_model_player_id=Id
+label_com_chariot_quizzo_model_player_lastname=Last Name
+label_com_chariot_quizzo_model_player_nickname=Nick Name
+label_com_chariot_quizzo_model_player_plural=Players
+label_com_chariot_quizzo_model_player_version=Version
+label_com_chariot_quizzo_model_quiz=Quiz
+label_com_chariot_quizzo_model_quiz_description=Description
+label_com_chariot_quizzo_model_quiz_id=Id
+label_com_chariot_quizzo_model_quiz_name=Name
+label_com_chariot_quizzo_model_quiz_players=Players
+label_com_chariot_quizzo_model_quiz_plural=Quizzes
+label_com_chariot_quizzo_model_quiz_short_name=Short_name
+label_com_chariot_quizzo_model_quiz_version=Version
 menu_category_player_label=Player
 menu_category_quiz_label=Quiz
 menu_item_player_list_label=Players
