fixed editing of form, navigation using future rather than earlier

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Fri Nov 30 15:21:37 EST 2012
-#Fri Nov 30 15:21:37 EST 2012
+#Updated at Thu Dec 06 11:05:23 EST 2012
+#Thu Dec 06 11:05:23 EST 2012
 application_name=Quizzo
 label_com_chariot_quizzo_db_player=Player
 label_com_chariot_quizzo_db_player_firstname=First Name
@@ -30,6 +30,7 @@ label_com_chariot_quizzo_model_quiz_name=Name
 label_com_chariot_quizzo_model_quiz_players=Players
 label_com_chariot_quizzo_model_quiz_plural=Quizzes
 label_com_chariot_quizzo_model_quiz_short_name=Short_name
+label_com_chariot_quizzo_model_quiz_shortname=Short Name
 label_com_chariot_quizzo_model_quiz_version=Version
 menu_category_player_label=Player
 menu_category_quiz_label=Quiz
