--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -1,5 +1,5 @@
-#Updated at Thu Dec 06 11:05:23 EST 2012
-#Thu Dec 06 11:05:23 EST 2012
+#Updated at Fri Dec 21 10:43:00 EST 2012
+#Fri Dec 21 10:43:00 EST 2012
 application_name=Quizzo
 label_com_chariot_quizzo_db_player=Player
 label_com_chariot_quizzo_db_player_firstname=First Name
@@ -29,6 +29,7 @@ label_com_chariot_quizzo_model_quiz_id=Id
 label_com_chariot_quizzo_model_quiz_name=Name
 label_com_chariot_quizzo_model_quiz_players=Players
 label_com_chariot_quizzo_model_quiz_plural=Quizzes
+label_com_chariot_quizzo_model_quiz_questions=Questions
 label_com_chariot_quizzo_model_quiz_short_name=Short_name
 label_com_chariot_quizzo_model_quiz_shortname=Short Name
 label_com_chariot_quizzo_model_quiz_version=Version
